ADD: style for donor page is added

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,6 +5,7 @@
   --accent-color: #5e81ff;
   --font-color: #444444;
   --font-color-light: #848484;
+  --input-background-color: #f1f1f1;
 }
 
 html,
@@ -24,5 +25,3 @@ a {
 * {
   box-sizing: border-box;
 }
-
-$primary-color: red;
