--- a/styles/pages/Donor.module.scss
+++ b/styles/pages/Donor.module.scss
@@ -8,7 +8,7 @@
 
 .main {
   margin: 1rem 2rem;
-  height: 82vh;
+
   &__h1 {
     font-size: 2.2rem;
     padding-bottom: 1rem;
@@ -26,9 +26,6 @@
   form {
     padding-top: 4rem;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     input {
       padding: 1.5rem 2rem;
       width: 100%;
@@ -44,6 +41,7 @@
       }
     }
     button {
+      width: 100%;
       background-color: var(--accent-color);
       border: none;
       padding: 1.5rem;
