--- a/styles/components/Popup.module.scss
+++ b/styles/components/Popup.module.scss
@@ -16,7 +16,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -60%);
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
@@ -29,6 +29,7 @@
     padding: 1rem 0rem;
   }
   p {
+    max-width: 80%;
     text-align: center;
     font-size: 1.5rem;
     font-weight: 500;
