ADD: firebase auth is now globel object using context

--- a/styles/pages/Login.module.scss
+++ b/styles/pages/Login.module.scss
@@ -19,3 +19,17 @@
     margin-bottom: 10rem;
   }
 }
+
+.logInMsg {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  transform: translate(0rem, 10rem);
+  padding: 0rem 3rem;
+  &__h3 {
+    margin-bottom: 3rem;
+    text-align: center;
+    font-size: 2rem;
+  }
+}
