--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -14,30 +14,29 @@
   &__hero {
     margin: 4rem 2rem;
     display: flex;
-    &__textbtn {
-      width: 70%;
-      h1 {
-        color: var(--font-color);
-        font-size: 2.2rem;
-        padding-bottom: 2rem;
-      }
-      button {
-        border: none;
-        outline: none;
-        background-color: var(--accent-color);
-        color: white;
-        padding: 1rem 1.5rem;
-        border-radius: 0.5rem;
-      }
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    height: 20rem;
+    h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      max-width: 27rem;
+      text-align: center;
+      padding-bottom: 1rem;
     }
-    &__img {
-      width: 30%;
+    p {
+      font-size: 1.3rem;
+      font-weight: 400;
+      max-width: 20rem;
+      text-align: center;
+      padding-bottom: 3rem;
     }
   }
 }
 
 .main__details {
-  margin: 6rem 2rem 0rem;
+  margin: 5rem 2rem 2rem;
   &__title {
     &__bold {
       font-size: 2rem;
